--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -21,6 +21,7 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481414.md#1" target="_blank">Costco上海开店现疯狂一幕 暂停营业</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481414.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1164296246-150x120.jpg" align ="left"></a>8月27日，美国仓储式零售商Costco在上海开幕当日遭遇了疯狂一幕，肉类、奶粉、茅台遭遇哄抢。由于卖场内外的人潮拥塞，Costco被迫下午暂停营业。由于当下贸易战不断升级，中共宣传舆论激烈反美，有大陆网友留言讽刺：“再响亮的口号，掩盖不了肚皮里的咕噜声。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 12:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481320.md#1" target="_blank">川普在G7：我不在乎赚钱 只在乎这个国家</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481320.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/000_1JS21C-150x120.jpg" align ="left"></a>明年的G7峰会将由美国主办，川普（特朗普）总统表示，希望在位于佛罗里达的川普俱乐部举行，这并非为赚钱，而是这里交通及各方面都方便。他强调，当总统已经让他损失数十亿。他不在乎赚钱，只在乎这个国家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月27日 11:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/26/n11479467.md#1" target="_blank">中科院研究生被杀案将宣判 家属盼凶手死刑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/26/n11479467.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/fec38580eb0244c3a79b10010ed9feea-150x120.jpg" align ="left"></a>备受关注的中科院研究生被高中同学杀害一案有了新进展，将于8月30日在北京一审宣判。原定于7月24日当天的宣判被临时取消。对于再次开庭，死者父亲仍旧坚持此前观点，“判凶手死刑，立即执行”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月27日 3:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11489622.md#1" target="_blank">每日三退声明精选（2019/08/30）</a><br></h3>从香港这个第一个采行一国两制的地方，我们看到了当共产党一步一步的渗透香港后，香港人的惊恐，他们从来没有生活在共产主义社会下，现在他们发觉一切都变了，也真正感受到失去了自由民主的可怕，我明白了共产党的邪恶，那么的隐蔽，背地里却做了那么多坏事，对国内大行封锁，这不是很可耻吗？还有谁想被骗？在此声明退出少先队、共青团、共产党，永远不再和中共邪党有任何瓜葛，期盼自由.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 11:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11486160.md#1" target="_blank">温哥华现反香港示威破坏行为 警方调查</a><br></h3>8月27日，大温哥华地区高贵林市（Coquitlam）的一户居民住房的车库门上，被人故意用油漆写上反对香港人争取自由、自治的文字，警方已对此展开调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 5:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11484867.md#1" target="_blank">共军突入香港 台立委：一再戳破一国两制谎言</a><br></h3>对于大批共军29日凌晨进入香港，立委洪慈庸表示，香港的情形，一再戳破中国（中共）一国两制的谎言，台湾人此刻更不能停止关注。立委王定宇也说，不管有没有“二制”，“一中”变成中国内政，国际奥援就会绑手绑脚，而且失去民主选择权就会失去最终决定权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 12:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11485572.md#1" target="_blank">送医开刀要先查宗教 中国有信徒不敢就医惨死</a><br></h3>中共近年持续加大迫害宗教的力道，现在连医院都须登记病人的宗教信仰情况。有外媒披露，中国山东一位孕妇因血崩被紧急送医，医生研判有生命危险，须立即进行手术，但院方竟要求先填妥宗教信仰资料，才愿意进行手术。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月29日 11:44 PM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11484716.md#1" target="_blank">每日三退声明精选（2019/08/28）</a><br></h3>我知道共产党的谎言建国、六四屠杀的罪恶，听说活摘器官的事情，我老家四川，三峡大坝切断龙脉，我老妈都知道。搞得我们四川总是地震泥石流。我退出少先队、红领巾，废除毒誓。法轮功学员信佛，说的是真话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月29日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/28/n11483902.md#1" target="_blank">加拿大华裔地产大亨涉秘密避税计划</a><br></h3>华裔陈氏兄弟（Chan brothers）家族是卑诗省最富有的家族之一，乐于慈善事业。他们涉嫌参与的离岸避税计划非常隐秘，已经被加拿大税局调查了超过10年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月29日 3:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/28/n11482270.md#1" target="_blank">每日三退声明精选（2019/08/27）</a><br></h3>在国内不知怎么退，只有来这里退。这个组织只为上级服务，缺少法治，缺少人性，缺少人权，与世界文明相悖而驰。这样的组织还要强硬地控制十多亿人。不想同流合污。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 11:20 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/25/n11477141.md#1" target="_blank">加国逮捕孟晚舟 中共报复遭西方盟国联合抵制</a><br></h3>因为加拿大按法律要求逮捕华为首席财务官孟晚舟，中共政府的“人质外交”及报复行动已经持续了近9个月。现在，西方盟国正在呼吁统一行动，对付中共当局“越来越激进的违反法治行为”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月27日 3:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/ncid282_5.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_5.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/ncid282_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_5.htm">http://www.epochtimes.com/gb/ncid282_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
